# EncodeHack2026

./: .gitignore  AGENTS.md  README.md  find_group.py  game.md  next.config.ts  package-lock.json  package.json  pyproject.toml  skills-lock.json  tsconfig.json  watchtower-context.md
.claude/: settings.local.json
.cursor/rules/: async-and-performance.mdc  code-quality-principles.mdc  communication.mdc  database.mdc  docstrings-and-docs.mdc  error-handling.mdc  fastapi.mdc  ml-llm-workflow.mdc  pydantic-validation.mdc  python-core.mdc  testing.mdc  tooling-and-dependencies.mdc  type-annotations.mdc
.kiro/agents/: codex-cli-bridge.md  pipeline-orchestrator.md  pipeline-rescue.md  pipeline-validator.md  pipeline-worker.md  watchtower-orchestrator.json  watchtower-subagent.json
.kiro/steering/: codex-packet-contract.md  drift-rubric.md  multi-agent-contract.md  restart-packet.md
b_pLiatAolmWc-1774061785609/components/: ambient-audio.tsx  watchtower-scene.tsx
b_tnhu7SSKNFJ-1774090809854/app/: page.tsx
b_tnhu7SSKNFJ-1774090809854/components/: doctrine-terminal.tsx  watchtower-scene.tsx
bridge/: __init__.py  codex_events.py  dev.mjs  kiro_acp.py  supervisor.py
docs/: game.md  live-agent-and-environment-behavior.md  watchtower-context.md
frontend/: package-lock.json  package.json  tailwind.config.ts
scripts/: run_codex_kiro_bridge.py
tests/: test_api.py  test_codex_events.py  test_graph_planner.py  test_integrations.py  test_luffa_bot.py  test_packet_markdown.py  test_planner.py  test_radio_service.py  test_runtime.py  test_simulation_engine.py
(+186 files in other folders)
